src/objects/TRAK_Test_Templates__c.object
<CustomObject>
    <description>Business Description: This object is used by a Test Manager or Test Script Writer to create a master test script. This master test script can then be copied to different users to execute by adding those users to the &quot;Testers&quot; related list.

Used In: Release Tracker App</description>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <description>This field will be auto populated when the test script gets approved: Created by Preeti Grover on 30/07/2014 by Preeti Grover:TRAK</description>
        <inlineHelpText>Date this has been approved by SME</inlineHelpText>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>This field will capture the approval status for Test Scripts: Created by Preeti Grover on 30/07/2014: TRAK</description>
        <inlineHelpText>Status of approval is auto populated as the Test Script goes through the process</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This name of the approver (SME) can be selected from this lookup field. Created by Preeti Grover on 30/07/2014: TRAK</description>
        <inlineHelpText>Your approval indicates that the test case/scripts are accurate and complete and meet the requirements of LQP-302-18</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Scripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Development_Stage__c</fullName>
        <formula>Text(User_Story__r.Development_Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Development Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Epic_Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Epic Ref</label>
        <referenceTo>TRAK_Epic__c</referenceTo>
        <relationshipLabel>Test Scripts</relationshipLabel>
        <relationshipName>Test_Scripts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <inlineHelpText>The expected result of this test</inlineHelpText>
        <label>Expected Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Introduction__c</fullName>
        <inlineHelpText>The introduction to this test script. This will be shown to testers before they start executing the test.</inlineHelpText>
        <label>Introduction</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Locked_For_editing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked For editing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recall_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recall Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signature_Meaning__c</fullName>
        <defaultValue>&quot;Your approval signifies that this Test Script is complete and accurately tests the functionality of the related User Story, and that the test complies with the requirements of LQP-302-18.&quot;</defaultValue>
        <label>Signature Meaning</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <formula>User_Story__r.Allocated_Sprint__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sprint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Draft Ready</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Scripts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <inlineHelpText>The title of the test script</inlineHelpText>
        <label>Test Title</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USerSToryDescription__c</fullName>
        <formula>User_Story__r.Full_User_Story__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Story Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>TRAK_User_Story__c</referenceTo>
        <relationshipLabel>Test Scripts</relationshipLabel>
        <relationshipName>TRAK_Test_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Test Script</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Sprint__c</columns>
        <columns>User_Story__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>PANGAEA_Sprint_4</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>User_Story__c</columns>
        <columns>USerSToryDescription__c</columns>
        <columns>Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>contains</operation>
            <value>PANGAEA Sprint 4</value>
        </filters>
        <label>PANGAEA Sprint 4</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PANGAEA_Sprint_41</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>User_Story__c</columns>
        <columns>USerSToryDescription__c</columns>
        <columns>Approver__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>contains</operation>
            <value>PANGAEA Sprint 4</value>
        </filters>
        <label>PANGAEA Sprint 4</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pangaea_Sprint_2</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>Introduction__c</columns>
        <columns>Expected_Result__c</columns>
        <columns>Status__c</columns>
        <columns>Development_Stage__c</columns>
        <columns>Sprint__c</columns>
        <columns>User_Story__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sprint__c</field>
            <operation>equals</operation>
            <value>Pangaea Sprint 2</value>
        </filters>
        <label>Pangaea - Sprint 2</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SafeStart_Stories</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Approval_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>SafeStart Stories</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>TS-{000000}</displayFormat>
        <label>Test Script Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scripts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Pending_Approval_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Approval_Status__c,&quot;Pending Approval&quot;), 
OR( 
ISCHANGED(Approval_Date__c), 

ISCHANGED(Approver__c),
ISCHANGED(Development_Stage__c), 
ISCHANGED(Expected_Result__c), 
ISCHANGED(Introduction__c), 
ISCHANGED(Sprint__c), 
ISCHANGED(Status__c), 
ISCHANGED(Title__c), 
ISCHANGED(User_Story__c), 
ISCHANGED(USerSToryDescription__c)
) 
)</errorConditionFormula>
        <errorMessage>You can&apos;t edit the record if the Approval status is &apos;Pending Approval&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRAK_Approved_Status_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>IF(ISPICKVAL(Approval_Status__c , &quot;Approved&quot;) &amp;&amp;  ISCHANGED( Approver__c),true,false)</errorConditionFormula>
        <errorMessage>You cannot change Approver once the Test Script is approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRAK_TestScript_Approver_Validation</fullName>
        <active>true</active>
        <description>This rule will stop the current user from setting himself as the approver:Created by Preeti Grover on 04/08/2014:TRAK</description>
        <errorConditionFormula>IF(NOT(ISBLANK(Approver__c))&amp;&amp; NOT(ISBLANK(Submitter__c)) &amp;&amp; Approver__c   =  Submitter__c,true,false)</errorConditionFormula>
        <errorMessage>The submitter can not be the approver of the Test Script. Please select a valid user to approve the request.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRAK_Test_Script_islocked_after_approved</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Approval_Status__c,&quot;Approved&quot;), 
OR( 
ISCHANGED(Approval_Date__c), 

ISCHANGED(Approver__c),
ISCHANGED(Development_Stage__c), 
ISCHANGED(Expected_Result__c), 
ISCHANGED(Introduction__c), 
ISCHANGED(Sprint__c), 
ISCHANGED(Status__c), 
ISCHANGED(Title__c), 
ISCHANGED(User_Story__c), 
ISCHANGED(USerSToryDescription__c)
) 
)</errorConditionFormula>
        <errorMessage>You Cannot edit after the test script is approved.</errorMessage>
    </validationRules>
</CustomObject>